后端大框架02

--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -11,6 +11,6 @@ spring:
     password: root
 
 #注册mapper映射文件
-mybatis:
-  mapper-locations: classpath:mapper/*.xml
+mybatis-plus:
+  mapper-locations: classpath*:com/jxd/student_information/dao/mapping/*.xml
   type-aliases-package: com.jxd.student_information.model  #设置别名
