--- a/pom.xml
+++ b/pom.xml
@@ -8,6 +8,19 @@
     <artifactId>student_information</artifactId>
     <version>1.0-SNAPSHOT</version>
 
+    <build>
+    <resources>
+        <resource>
+            <directory>src/main/java</directory>
+            <includes>
+                <include>**/*.properties</include>
+                <include>**/*.xml</include>
+            </includes>
+            <filtering>false</filtering>
+        </resource>
+    </resources>
+    </build>
+
     <!--继承的父依赖-->
     <parent>
         <groupId>org.springframework.boot</groupId>
