--- a/pom.xml
+++ b/pom.xml
@@ -63,6 +63,13 @@
             <groupId>org.projectlombok</groupId>
             <artifactId>lombok</artifactId>
         </dependency>
+
+        <dependency>
+            <groupId>commons-io</groupId>
+            <artifactId>commons-io</artifactId>
+            <version>2.5</version>
+        </dependency>
+
         <!--代码生成器依赖-->
         <!--<dependency>
             <groupId>com.baomidou</groupId>
